--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#6366f1" />
     <meta
       name="description"
-      content="Lucky CCTX - Daily winners of ZetaChain cross-chain transactions"
+      content="Fortune Cookie - Daily winners of ZetaChain cross-chain transactions"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Lucky CCTX | ZetaChain Rewards</title>
+    <title>Fortune Cookie | ZetaChain Rewards</title>
     <!-- Import Inter font from Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
