switch daily rewards to weekly rewards; add chain badge, finality and gas fee

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#6366f1" />
     <meta
       name="description"
-      content="Fortune Cookie - Daily winners of ZetaChain cross-chain transactions"
+      content="Fortune Cookie - Weekly winners of ZetaChain cross-chain transactions"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/images/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
